# CAS

./: .gitignore  .readthedocs.yaml  example.ipynb  pyproject.toml  readme.md
CAS/: __init__.py  cas_.py
CAS/test/: conftest.py  test_cas_output_type.py  test_cas_parameter_validation.py
docs/: api.rst  conf.py  index.rst  install.rst
experiments/: community_evaluation.py  format_data.ipynb  outliers.ipynb  outliers_and_overlaps.ipynb  overlaps.ipynb
